Administration/Software/k8s/satis/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: satis
  namespace: satis
spec:
  selector:
    app: satis-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
