Administration/Software/k8s/satis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: satis-web-ingress
  namespace: satis
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - satis.nikbayov.ru
      secretName: satis-tls
  rules:
    - host: satis.nikbayov.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: satis  
                port:
                  number: 80
